[Shaz] added annotations for get-gate-by-id
